# gedbas_cli

./: Cargo.toml  README.md  stackaid.json
.github/workflows/: stackaid.yml
src/: main.rs
src/lib/: mod.rs  models.rs  search.rs
