[package]
name = "gedbas_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
lazy_static = "1.4.0"
color-eyre = "0.5"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-unwrap = "0.9"
tracing-tree = "0.2.0"
clap = { version = "3.1.17", features = [ "derive" ] }